--- a/Project.ipynb
+++ b/Project.ipynb
@@ -325,36 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "business[business.categories.str.contains('Restaurant')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('O')"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "business.categories.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +499,7 @@
        "17    NV  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,6 +508,301 @@
     "business2 = business[business.categories.str.contains('Restaurant', na=False)]\n",
     "business2.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>business_id</th>\n",
+       "      <th>categories</th>\n",
+       "      <th>city</th>\n",
+       "      <th>is_open</th>\n",
+       "      <th>name</th>\n",
+       "      <th>postal_code</th>\n",
+       "      <th>review_count</th>\n",
+       "      <th>stars</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>QXAEGFB4oINsVuTFxEYKFQ</td>\n",
+       "      <td>Specialty Food, Restaurants, Dim Sum, Imported...</td>\n",
+       "      <td>Mississauga</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Emerald Chinese Restaurant</td>\n",
+       "      <td>L5R 3E7</td>\n",
+       "      <td>128</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>ON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>gnKjwL_1w79qoiV3IC_xQQ</td>\n",
+       "      <td>Sushi Bars, Restaurants, Japanese</td>\n",
+       "      <td>Charlotte</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Musashi Japanese Restaurant</td>\n",
+       "      <td>28210</td>\n",
+       "      <td>170</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1Dfx3zM-rW4n-31KeC8sJg</td>\n",
+       "      <td>Restaurants, Breakfast &amp; Brunch, Mexican, Taco...</td>\n",
+       "      <td>Phoenix</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Taco Bell</td>\n",
+       "      <td>85016</td>\n",
+       "      <td>18</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>AZ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>fweCYi8FmbJXHCqLnwuk8w</td>\n",
+       "      <td>Italian, Restaurants, Pizza, Chicken Wings</td>\n",
+       "      <td>Mentor-on-the-Lake</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Marco's Pizza</td>\n",
+       "      <td>44060</td>\n",
+       "      <td>16</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>OH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>PZ-LZzSlhSe9utkQYU8pFg</td>\n",
+       "      <td>Restaurants, Italian</td>\n",
+       "      <td>Las Vegas</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Carluccio's Tivoli Gardens</td>\n",
+       "      <td>89119</td>\n",
+       "      <td>40</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NV</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               business_id                                         categories  \\\n",
+       "1   QXAEGFB4oINsVuTFxEYKFQ  Specialty Food, Restaurants, Dim Sum, Imported...   \n",
+       "2   gnKjwL_1w79qoiV3IC_xQQ                  Sushi Bars, Restaurants, Japanese   \n",
+       "11  1Dfx3zM-rW4n-31KeC8sJg  Restaurants, Breakfast & Brunch, Mexican, Taco...   \n",
+       "13  fweCYi8FmbJXHCqLnwuk8w         Italian, Restaurants, Pizza, Chicken Wings   \n",
+       "17  PZ-LZzSlhSe9utkQYU8pFg                               Restaurants, Italian   \n",
+       "\n",
+       "                  city  is_open                         name postal_code  \\\n",
+       "1          Mississauga        1   Emerald Chinese Restaurant     L5R 3E7   \n",
+       "2            Charlotte        1  Musashi Japanese Restaurant       28210   \n",
+       "11             Phoenix        1                    Taco Bell       85016   \n",
+       "13  Mentor-on-the-Lake        1                Marco's Pizza       44060   \n",
+       "17           Las Vegas        0   Carluccio's Tivoli Gardens       89119   \n",
+       "\n",
+       "    review_count  stars state  \n",
+       "1            128    2.5    ON  \n",
+       "2            170    4.0    NC  \n",
+       "11            18    3.0    AZ  \n",
+       "13            16    4.0    OH  \n",
+       "17            40    4.0    NV  "
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "business2 = business2.drop([\"address\", \"attributes\", \"latitude\", \"longitude\", \"hours\"], axis=1)\n",
+    "business2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>business_id</th>\n",
+       "      <th>categories</th>\n",
+       "      <th>city</th>\n",
+       "      <th>is_open</th>\n",
+       "      <th>name</th>\n",
+       "      <th>postal_code</th>\n",
+       "      <th>review_count</th>\n",
+       "      <th>stars</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>QXAEGFB4oINsVuTFxEYKFQ</td>\n",
+       "      <td>Specialty Food, Restaurants, Dim Sum, Imported...</td>\n",
+       "      <td>Mississauga</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Emerald Chinese Restaurant</td>\n",
+       "      <td>L5R 3E7</td>\n",
+       "      <td>128</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>ON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>gnKjwL_1w79qoiV3IC_xQQ</td>\n",
+       "      <td>Sushi Bars, Restaurants, Japanese</td>\n",
+       "      <td>Charlotte</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Musashi Japanese Restaurant</td>\n",
+       "      <td>28210</td>\n",
+       "      <td>170</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1Dfx3zM-rW4n-31KeC8sJg</td>\n",
+       "      <td>Restaurants, Breakfast &amp; Brunch, Mexican, Taco...</td>\n",
+       "      <td>Phoenix</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Taco Bell</td>\n",
+       "      <td>85016</td>\n",
+       "      <td>18</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>AZ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>fweCYi8FmbJXHCqLnwuk8w</td>\n",
+       "      <td>Italian, Restaurants, Pizza, Chicken Wings</td>\n",
+       "      <td>Mentor-on-the-Lake</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Marco's Pizza</td>\n",
+       "      <td>44060</td>\n",
+       "      <td>16</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>OH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>PZ-LZzSlhSe9utkQYU8pFg</td>\n",
+       "      <td>Restaurants, Italian</td>\n",
+       "      <td>Las Vegas</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Carluccio's Tivoli Gardens</td>\n",
+       "      <td>89119</td>\n",
+       "      <td>40</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NV</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               business_id                                         categories  \\\n",
+       "1   QXAEGFB4oINsVuTFxEYKFQ  Specialty Food, Restaurants, Dim Sum, Imported...   \n",
+       "2   gnKjwL_1w79qoiV3IC_xQQ                  Sushi Bars, Restaurants, Japanese   \n",
+       "11  1Dfx3zM-rW4n-31KeC8sJg  Restaurants, Breakfast & Brunch, Mexican, Taco...   \n",
+       "13  fweCYi8FmbJXHCqLnwuk8w         Italian, Restaurants, Pizza, Chicken Wings   \n",
+       "17  PZ-LZzSlhSe9utkQYU8pFg                               Restaurants, Italian   \n",
+       "\n",
+       "                  city  is_open                         name postal_code  \\\n",
+       "1          Mississauga        1   Emerald Chinese Restaurant     L5R 3E7   \n",
+       "2            Charlotte        1  Musashi Japanese Restaurant       28210   \n",
+       "11             Phoenix        1                    Taco Bell       85016   \n",
+       "13  Mentor-on-the-Lake        1                Marco's Pizza       44060   \n",
+       "17           Las Vegas        0   Carluccio's Tivoli Gardens       89119   \n",
+       "\n",
+       "    review_count  stars state  \n",
+       "1            128    2.5    ON  \n",
+       "2            170    4.0    NC  \n",
+       "11            18    3.0    AZ  \n",
+       "13            16    4.0    OH  \n",
+       "17            40    4.0    NV  "
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-80-28984c035e32>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbusiness2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'postal_code'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "business2.drop(['postal_code'].str.len() > 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
