initial text cleaning

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -11,41 +11,21 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to /home/eksdee/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to /home/eksdee/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib\n",
-    "import nltk\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.neighbors import KNeighborsRegressor\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
     "\n",
-    "%matplotlib inline\n",
-    "nltk.download('punkt')\n",
-    "nltk.download('stopwords')"
+    "from nltk import word_tokenize\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem.porter import PorterStemmer\n",
+    "\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -81,7 +61,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7ff06af8c5f8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb289575630>"
       ]
      },
      "execution_count": 4,
@@ -207,7 +187,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_buckets = df_buckets.merge(pd.concat([city_business.business_id, city_business.stars], axis=1), on='business_id', how='left')"
+    "df_buckets = df_buckets.merge(pd.concat([city_business.business_id, city_business.stars], axis=1), on='business_id', how='left')\n",
+    "df_buckets = df_buckets.astype({'stars': 'category'})"
    ]
   },
   {
@@ -284,12 +265,12 @@
        "3  --wIGbLEhlpl_UeAIyDmZQ  Awesome, fantastic, friendly---I honestly can'...   \n",
        "4  -0K4W5p3wbQe_vDoB5jMgQ  Students get a 5% discount and they have Asian...   \n",
        "\n",
-       "   stars  \n",
-       "0    5.0  \n",
-       "1    3.0  \n",
-       "2    3.5  \n",
-       "3    4.5  \n",
-       "4    4.0  "
+       "  stars  \n",
+       "0   5.0  \n",
+       "1   3.0  \n",
+       "2   3.5  \n",
+       "3   4.5  \n",
+       "4   4.0  "
       ]
      },
      "execution_count": 11,
@@ -314,9 +295,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "this is where we would remove puncuation, do stemming / lematization and other text processing to make the model better\n",
+    "### Clean text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: stemming\n",
     "\n",
-    "we're going to skip that and come back to it after the first deadline"
+    "def pipeline(text):\n",
+    "    stops = stopwords.words('english')\n",
+    "    stemmer = PorterStemmer()\n",
+    "    \n",
+    "    tokens = word_tokenize(text)\n",
+    "    tokens = [word.lower() for word in tokens]\n",
+    "    tokens = [word for word in tokens if word.isalpha()]\n",
+    "    tokens = [word for word in tokens if not word in stops]\n",
+    "    tokens = [stemmer.stem(word) for word in tokens]\n",
+    "    return tokens\n",
+    "    "
    ]
   },
   {
@@ -328,46 +328,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<7017x26710 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 4228557 stored elements in Compressed Sparse Row format>"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stop = nltk.corpus.stopwords.words('english')\n",
-    "vectorizer = TfidfVectorizer(min_df=7, max_df=0.8, stop_words=stop)\n",
-    "X = vectorizer.fit_transform(df_buckets.text)\n",
-    "X"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, df_buckets.stars, test_size=0.2, random_state=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.32597207888162505"
+       "<7017x647 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 1623196 stored elements in Compressed Sparse Row format>"
       ]
      },
      "execution_count": 29,
@@ -376,34 +344,66 @@
     }
    ],
    "source": [
-    "knn = KNeighborsRegressor(n_neighbors=5)\n",
+    "# TODO:\n",
+    "    # Is there a better vectorizer?\n",
+    "    # Optimize parameters for vectorizer\n",
+    "        # max features\n",
+    "\n",
+    "vectorizer = CountVectorizer(min_df=7,\n",
+    "                             max_df=0.8,\n",
+    "                             ngram_range=(1, 2),\n",
+    "                             max_features=2500,\n",
+    "                             tokenizer=pipeline\n",
+    "                            )\n",
+    "X = vectorizer.fit_transform(df_buckets.text)\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, df_buckets.stars, test_size=0.2, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.40704659719367076"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "knn = KNeighborsRegressor(n_neighbors=12)\n",
     "knn.fit(X_train, y_train)\n",
     "knn.score(X_test, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.47435897435897434"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "y_train = y_train.astype('int')\n",
-    "y_test = y_test.astype('int')\n",
-    "\n",
-    "nb = MultinomialNB()\n",
-    "nb.fit(X_train, y_train)\n",
-    "nb.score(X_test, y_test)"
+    "# 12 neighbors gives the highest score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This accuracy score is still really low"
    ]
   },
   {
