--- a/Project.ipynb
+++ b/Project.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb289575630>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f5edc78d630>"
       ]
      },
      "execution_count": 4,
@@ -89,10 +89,222 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>business_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>address</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>postal_code</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>stars</th>\n",
+       "      <th>review_count</th>\n",
+       "      <th>is_open</th>\n",
+       "      <th>attributes</th>\n",
+       "      <th>categories</th>\n",
+       "      <th>hours</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>23</td>\n",
+       "      <td>1RHY4K3BD22FK7Cfftn8Mg</td>\n",
+       "      <td>Marathon Diner</td>\n",
+       "      <td>Center Core - Food Court, Fl 3, Pittsburgh Int...</td>\n",
+       "      <td>Pittsburgh</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>15231</td>\n",
+       "      <td>40.496177</td>\n",
+       "      <td>-80.246011</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{'RestaurantsTakeOut': 'True', 'BusinessParkin...</td>\n",
+       "      <td>Sandwiches, Salad, Restaurants, Burgers, Comfo...</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>66</td>\n",
+       "      <td>dQj5DLZjeDK3KFysh1SYOQ</td>\n",
+       "      <td>Apteka</td>\n",
+       "      <td>4606 Penn Ave</td>\n",
+       "      <td>Pittsburgh</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>15224</td>\n",
+       "      <td>40.465694</td>\n",
+       "      <td>-79.949324</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>242</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{'CoatCheck': 'False', 'BusinessParking': '{'g...</td>\n",
+       "      <td>Nightlife, Bars, Polish, Modern European, Rest...</td>\n",
+       "      <td>{'Wednesday': '17:0-0:0', 'Thursday': '17:0-0:...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>73</td>\n",
+       "      <td>v-scZMU6jhnmV955RSzGJw</td>\n",
+       "      <td>No. 1 Sushi Sushi</td>\n",
+       "      <td>436 Market St</td>\n",
+       "      <td>Pittsburgh</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>15222</td>\n",
+       "      <td>40.441062</td>\n",
+       "      <td>-80.002126</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>106</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{'OutdoorSeating': 'False', 'HasTV': 'True', '...</td>\n",
+       "      <td>Japanese, Sushi Bars, Restaurants</td>\n",
+       "      <td>{'Monday': '11:0-20:0', 'Tuesday': '11:0-20:0'...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>147</td>\n",
+       "      <td>t-6tdxRaz7s9a0sf94Tguw</td>\n",
+       "      <td>Impressionz</td>\n",
+       "      <td>6008 Broad St</td>\n",
+       "      <td>Pittsburgh</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>15206</td>\n",
+       "      <td>40.462345</td>\n",
+       "      <td>-79.924165</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{'RestaurantsDelivery': 'False', 'RestaurantsG...</td>\n",
+       "      <td>Restaurants, Caribbean</td>\n",
+       "      <td>{'Monday': '11:0-20:0', 'Tuesday': '11:0-20:0'...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>177</td>\n",
+       "      <td>5WMIvoMx3l1vn1uJ3HZB6Q</td>\n",
+       "      <td>Subway</td>\n",
+       "      <td>411 7th Ave</td>\n",
+       "      <td>Pittsburgh</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>15219</td>\n",
+       "      <td>40.442863</td>\n",
+       "      <td>-79.996412</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{'RestaurantsTakeOut': 'True', 'BusinessAccept...</td>\n",
+       "      <td>Fast Food, Sandwiches, Restaurants</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                business_id               name  \\\n",
+       "23   1RHY4K3BD22FK7Cfftn8Mg     Marathon Diner   \n",
+       "66   dQj5DLZjeDK3KFysh1SYOQ             Apteka   \n",
+       "73   v-scZMU6jhnmV955RSzGJw  No. 1 Sushi Sushi   \n",
+       "147  t-6tdxRaz7s9a0sf94Tguw        Impressionz   \n",
+       "177  5WMIvoMx3l1vn1uJ3HZB6Q             Subway   \n",
+       "\n",
+       "                                               address        city state  \\\n",
+       "23   Center Core - Food Court, Fl 3, Pittsburgh Int...  Pittsburgh    PA   \n",
+       "66                                       4606 Penn Ave  Pittsburgh    PA   \n",
+       "73                                       436 Market St  Pittsburgh    PA   \n",
+       "147                                      6008 Broad St  Pittsburgh    PA   \n",
+       "177                                        411 7th Ave  Pittsburgh    PA   \n",
+       "\n",
+       "    postal_code   latitude  longitude  stars  review_count  is_open  \\\n",
+       "23        15231  40.496177 -80.246011    4.0            35        1   \n",
+       "66        15224  40.465694 -79.949324    4.5           242        1   \n",
+       "73        15222  40.441062 -80.002126    4.5           106        1   \n",
+       "147       15206  40.462345 -79.924165    4.5            29        0   \n",
+       "177       15219  40.442863 -79.996412    3.0             3        1   \n",
+       "\n",
+       "                                            attributes  \\\n",
+       "23   {'RestaurantsTakeOut': 'True', 'BusinessParkin...   \n",
+       "66   {'CoatCheck': 'False', 'BusinessParking': '{'g...   \n",
+       "73   {'OutdoorSeating': 'False', 'HasTV': 'True', '...   \n",
+       "147  {'RestaurantsDelivery': 'False', 'RestaurantsG...   \n",
+       "177  {'RestaurantsTakeOut': 'True', 'BusinessAccept...   \n",
+       "\n",
+       "                                            categories  \\\n",
+       "23   Sandwiches, Salad, Restaurants, Burgers, Comfo...   \n",
+       "66   Nightlife, Bars, Polish, Modern European, Rest...   \n",
+       "73                   Japanese, Sushi Bars, Restaurants   \n",
+       "147                             Restaurants, Caribbean   \n",
+       "177                 Fast Food, Sandwiches, Restaurants   \n",
+       "\n",
+       "                                                 hours  \n",
+       "23                                                None  \n",
+       "66   {'Wednesday': '17:0-0:0', 'Thursday': '17:0-0:...  \n",
+       "73   {'Monday': '11:0-20:0', 'Tuesday': '11:0-20:0'...  \n",
+       "147  {'Monday': '11:0-20:0', 'Tuesday': '11:0-20:0'...  \n",
+       "177                                               None  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# Choose businesses from Pittsburgh because it isn't too big for my laptop to process\n",
     "city_business = business[business.city == 'Pittsburgh']\n",
-    "city_business_ids = pd.DataFrame(city_business.business_id)"
+    "city_business.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### EDA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of businesses with more than one location: 411\n",
+      "Number of businesses with more than 5 stars: 0\n",
+      "Number of businesses with less than 0 stars: 0\n",
+      "Number of businesses without ratings: 0\n",
+      "Number of businesses without reviews: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Number of businesses with more than one location: {0}\".format(sum(city_business.name.value_counts() > 1)))\n",
+    "# Review data for businesses with lots of locations should be kept separated because\n",
+    "# the business can rate differently in different places\n",
+    "\n",
+    "print(\"Number of businesses with more than 5 stars: {0}\".format(sum(city_business.stars > 5)))\n",
+    "print(\"Number of businesses with less than 0 stars: {0}\".format(sum(city_business.stars < 0)))\n",
+    "print(\"Number of businesses without ratings: {0}\".format(city_business[city_business.stars.isnull()].business_id.count()))\n",
+    "print(\"Number of businesses without reviews: {0}\".format(city_business[city_business.review_count == 0].business_id.count()))"
    ]
   },
   {
@@ -104,7 +316,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "city_business_ids = pd.DataFrame(city_business.business_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,23 +339,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Format data matrix\n",
-    "The goal of the model is to predict business stars based on review text\n",
-    "want a matrix with business stars and text for all reviews\n",
-    "use nltk to do modeling and sentiment analysis"
+    "### Format data matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "merged.drop(['user_id',\n",
     "             'review_id',\n",
-    "             'useful',\n",
-    "             'funny',\n",
-    "             'cool',\n",
     "             'date'],\n",
     "            axis=1,\n",
     "            inplace=True)\n",
@@ -144,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -153,11 +368,14 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 225496 entries, 0 to 225495\n",
-      "Data columns (total 2 columns):\n",
+      "Data columns (total 5 columns):\n",
       "business_id    225496 non-null object\n",
+      "useful         225496 non-null float64\n",
+      "funny          225496 non-null float64\n",
+      "cool           225496 non-null float64\n",
       "text           225496 non-null object\n",
-      "dtypes: object(2)\n",
-      "memory usage: 3.4+ MB\n"
+      "dtypes: float64(3), object(2)\n",
+      "memory usage: 8.6+ MB\n"
      ]
     }
    ],
@@ -174,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +491,7 @@
        "4   4.0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,21 +518,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: stemming\n",
-    "\n",
     "def pipeline(text):\n",
     "    stops = stopwords.words('english')\n",
-    "    stemmer = PorterStemmer()\n",
     "    \n",
     "    tokens = word_tokenize(text)\n",
     "    tokens = [word.lower() for word in tokens]\n",
     "    tokens = [word for word in tokens if word.isalpha()]\n",
     "    tokens = [word for word in tokens if not word in stops]\n",
-    "    tokens = [stemmer.stem(word) for word in tokens]\n",
     "    return tokens\n",
     "    "
    ]
@@ -328,31 +542,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<7017x647 sparse matrix of type '<class 'numpy.int64'>'\n",
-       "\twith 1623196 stored elements in Compressed Sparse Row format>"
+       "<7017x646 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 1586060 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# TODO:\n",
-    "    # Is there a better vectorizer?\n",
-    "    # Optimize parameters for vectorizer\n",
-    "        # max features\n",
+    "# TODO: Will the model work better if review useful, funny, cool columns are left in?\n",
     "\n",
-    "vectorizer = CountVectorizer(min_df=7,\n",
-    "                             max_df=0.8,\n",
+    "vectorizer = CountVectorizer(min_df=0.2,\n",
+    "                             max_df=0.9,\n",
     "                             ngram_range=(1, 2),\n",
-    "                             max_features=2500,\n",
     "                             tokenizer=pipeline\n",
     "                            )\n",
     "X = vectorizer.fit_transform(df_buckets.text)\n",
@@ -361,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,16 +580,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.40704659719367076"
+       "0.4595077478886873"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
