--- a/Project.ipynb
+++ b/Project.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,12 @@
     "\n",
     "from nltk import word_tokenize\n",
     "from nltk.corpus import stopwords\n",
-    "from nltk.stem.porter import PorterStemmer\n",
     "\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import KFold\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -61,7 +61,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f5edc78d630>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fa5bba5e630>"
       ]
      },
      "execution_count": 4,
@@ -566,35 +566,73 @@
     "                             tokenizer=pipeline\n",
     "                            )\n",
     "X = vectorizer.fit_transform(df_buckets.text)\n",
+    "y = df_buckets.stars\n",
     "X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3758082297253549\n",
+      "0.4461855896952447\n",
+      "0.4064969911981317\n",
+      "0.45860105440916027\n",
+      "0.38576537431991664\n",
+      "0.41145717686823075\n",
+      "0.43054380862007313\n",
+      "0.46324941559204924\n",
+      "0.3888145026604606\n",
+      "0.4685369746258394\n",
+      "0.4840124668128825\n",
+      "0.4797028714042588\n",
+      "0.4464364981118866\n",
+      "0.4898979430692091\n",
+      "0.4474789055351023\n",
+      "0.49455409482573104\n",
+      "0.42516324336117695\n",
+      "0.46466032983036176\n",
+      "0.4719544340281526\n",
+      "0.44891646080443687\n"
+     ]
+    }
+   ],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, df_buckets.stars, test_size=0.2, random_state=0)"
+    "y = df_buckets.stars\n",
+    "knn = KNeighborsRegressor(n_neighbors=12)\n",
+    "kf = KFold(n_splits=20)\n",
+    "kf.get_n_splits(X)\n",
+    "for train_index, test_index in kf.split(X):\n",
+    "    X_train, X_test = X[train_index], X[test_index]\n",
+    "    y_train, y_test = y[train_index], y[test_index]\n",
+    "    knn.fit(X_train, y_train)\n",
+    "    print(knn.score(X_test, y_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4595077478886873"
+       "0.5011254532902933"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.09, random_state=0)\n",
+    "\n",
     "knn = KNeighborsRegressor(n_neighbors=12)\n",
     "knn.fit(X_train, y_train)\n",
     "knn.score(X_test, y_test)"
